# NomadMark

./: .clippy.toml  .editorconfig  .gitignore  .rustfmt.toml  CLAUDE.md  Cargo.toml  DEVELOPMENT_ROADMAP.md  IMPLEMENTATION_GUIDE.md  MARKDOWN_RENDERING_STATUS.md  MISSING_FEATURES_ANALYSIS.md  PROJECT_PROGRESS.md  PROJECT_STRUCTURE.md  REFACTORING_CONTEXT.md  REFACTORING_PROGRESS.md  ROADMAP_ANALYSIS.md  TESTING_CHECKLIST.md  build-android.bat  build-android.sh  markdown-syntax-test.md  ratta-android-apk-check.md  test-blockquotes.md  test-code-blocks.md  test-links.md  test-lists.md  test-math-formulas.md  test-music-render.md  test-music-rendering.md  test-music-sheets.md  test-tables.md  test_inline_extensions.md  test_links_images.md  《UI交互文档》.md  乐谱测试.md  乐谱渲染分析.md  图片测试用例.md  在线Markdown编辑器 - 免费实时预览编辑器.html  详细设计文档.md
.claude/: SKILLS.md
.claude/skills/: android-build-troubleshooting.md  android-undo-redo-fix.md  crash-log-collection.md  rust-core-rendering-troubleshooting.md  rust-core-review.md
.github/workflows/: android-build.yml  core-ci.yml  desktop-build.yml
.obsidian/: workspace.json
android/: build.gradle  gradle.properties  local.properties  settings.gradle
android/app/: ratta.jks
android/app/src/main/java/com/editor/nomadmark/: FileOperationHelper.kt  GestureOverlayView.kt  GestureRecognizer.kt  MarkdownEditorActivity.kt
android/app/src/main/java/com/editor/nomadmark/toc/: TocAdapter.kt
android/app/src/main/res/drawable/: ic_arrow_down.xml  ic_arrow_up.xml  ic_redo.xml  ic_rename.xml  ic_split_on.xml  ic_toc.xml  search_input_bg.xml
android/app/src/main/res/layout/: activity_editor.xml
core/: Cargo.toml  check_build_info.sh  test_jni_feature.sh  test_thematic_break.txt
core/src/: insert.rs  lib.rs
core/src/bridge/: jni.rs  mod.rs  types.rs
core/src/history/: mod.rs
core/src/layout/: engine.rs  mod.rs
core/src/math/: mod.rs
core/src/parser/: ast.rs  error.rs  extensions.rs  mod.rs  streaming.rs
core/src/render/: commands.rs  mod.rs
core/src/replace/: mod.rs
core/src/search/: mod.rs
core/src/syntax/: highlighter.rs  languages.rs  mod.rs  theme.rs
desktop/src-tauri/: Cargo.toml
desktop/src/hooks/: useCanvasRenderer.ts  useDocument.ts
docs/: PROJECT_STRUCTURE_ANALYSIS.md  REFACTORING_PLAN.md  VALIDATION_REPORT.md  auto-save-recovery-design.md  autosave-dialog-fix.md  autosave-test-guide.md  autosave-test-plan.md  data-storage-analysis.md  markdown-syntax-test.md  rust-core-roadmap.md  skills.md  supernote-image-implementation.md  supernote-image-usage.md  thematic-break-integration.md  thematic-break-spec.md  图片功能调试指南.md  图片测试步骤.md  图片测试用例.md  图片测试页面.md  图片渲染代码清单.md
docs/architecture/: README.md  design-v2.md  detailed-design.md  dual-rendering-system.md  eink-theme-config.md  implementation-template.md  rust-core-unified-rendering-plan.md
docs/features/: android-music-code-reference.md  android-music-rendering-design.md  markdown-rendering.md  ui-interactions.md
docs/guides/: android-build-setup.md  android-mirror-setup.md  android-ndk-install-windows.md  deployment.md
docs/progress/: rust-core-rendering-progress.md  verification-summary-2026-07-08.md
docs/reports/: code-quality-report-2026-07-08.md  markwon-dependency-analysis.md  migration-impact-analysis.md  progress.md  refactoring-complete.md
scripts/: test-autosave.sh
tests/render/samples/: blockquote-thematicbreak-test.md  complete-syntax-test.md
