[workspace]
resolver = "2"
members = [
    "core",
]

# Desktop 暂时禁用（API 不匹配，需要在后续阶段修复）
# members = [
#     "core",
#     "platforms/desktop/src-tauri",
# ]

[workspace.package]
version = "0.1.0"
authors = ["NomadMark Team"]
license = "MIT"
repository = "https://github.com/nomadmark/nomadmark"
edition = "2021"

[workspace.dependencies]
# 统一管理依赖版本
pulldown-cmark = "0.9"
rustybuzz = "0.7"
font-types = "0.1"
lru = "0.11"
rayon = "1.7"
tantivy = "0.19"
regex = "1"
thiserror = "1.0"
memmap2 = "0.9"
libc = "0.2"
jni = "0.21"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["full"] }
tauri = { version = "1.6", features = ["shell-open"] }
notify = "6.1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = false
panic = "abort"

[profile.dev]
opt-level = 0

[profile.dev.package."*"]
opt-level = 3
