[package]
name = "markdown_core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib", "staticlib"]
name = "markdown_core"

[dependencies]
# Markdown parsing
pulldown-cmark.workspace = true

# Text shaping & font handling
rustybuzz.workspace = true
font-types.workspace = true

# Caching
lru.workspace = true

# Concurrency
rayon.workspace = true

# Full-text search
tantivy.workspace = true

# Regular expressions (optional, for search module)
regex = { workspace = true, optional = true }

# Error handling
thiserror.workspace = true

# Memory management
memmap2.workspace = true

# FFI
libc.workspace = true

[target.'cfg(target_os = "android")'.dependencies]
jni = { workspace = true, optional = true }

[features]
android = ["jni"]
jni = ["dep:jni"]
regex-search = ["regex"]
